incomplete as of now

--- a/Lab7.tex
+++ b/Lab7.tex
@@ -42,5 +42,5 @@ $$Y(1+BG)=X(AG)\rightarrow \frac{Y}{X}=H(s)=\frac{AG}{1+BG}=\frac{\frac{s+4}{s^2
 $$H(s)=\frac{\frac{s+4}{(s+1)(s+3)}\frac{s+9}{(s-8)(s+2)(s+4)}}{1+\frac{s+9}{(s-8)(s+2)(s+4)}(s+12)(s+14)}$$
 $$H(s)=\frac{(s+9)}{(s+1)(s+3)(s+2)(s-8)(1+\frac{(s+9)(s+12)(s+14)}{(s-8)(s+2)(s+4)})}$$
 $$H(s)=\frac{(s+9)}{(s+1)(s+3)(s+2)(s-8)(s+12)(s+14)(\frac{(s-8)(s+2)(s+4)+(s+9)}{(s-8)(s+2)(s+4)})}$$
-$$H(s)=\frac{(s+9)(s+4)}{(s+1)(s+3)(s+12)(s+14)((s-8)(s+2)(s+4)+(s+9))}$$
+$$H(s)=\frac{(s+9)(s+4)}{(s+1)(s+3)((s-8)(s+2)(s+4)+(s+9)(s+12)(s+14))}$$
 \end{document}
